<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/editBeer_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/placeholder"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/editBeer_eFabRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editBeer_header"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="56dp"
        android:text="@string/common_button_repeat"
        app:icon="@drawable/ico_repeat" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/editBeer_eFabEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editBeer_header"
        android:layout_marginStart="56dp"
        android:layout_marginTop="9dp"
        android:text="@string/common_button_edit"
        app:icon="@drawable/ico_edit" />

    <Button
        android:id="@+id/editBeer_buttonDismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editBeer_eFabEdit"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/common_button_close" />

</RelativeLayout>
