<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/newBeer_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/placeholder"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/newBeer_iconButton"
        style="?attr/materialIconButtonFilledTonalStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp"
        android:contentDescription="@string/common_button_close"
        app:icon="@drawable/ico_close"
        tools:ignore="RelativeOverlap" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newBeer_textFieldBreweryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newBeer_header"
        android:layout_marginBottom="4dp"
        android:hint="@string/newBeer_breweryName"
        android:paddingHorizontal="12dp"
        app:endIconDrawable="@drawable/ico_factory"
        app:endIconMode="custom">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/newBeer_editTextBreweryName"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newBeer_textFieldDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newBeer_textFieldBreweryName"
        android:layout_marginVertical="4dp"
        android:hint="@string/newBeer_description"
        android:paddingHorizontal="12dp"
        app:endIconDrawable="@drawable/ico_beer"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newBeer_editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/newBeer_divider_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newBeer_textFieldDescription"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/newBeer_toggleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newBeer_divider_0"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/newBeer_toggleGroup_0"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="130dp"
            android:text="@string/beer_size_3dl"
            app:icon="@drawable/ico_measure" />

        <Button
            android:id="@+id/newBeer_toggleGroup_1"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="130dp"
            android:text="@string/beer_size_5dl"
            app:icon="@drawable/ico_measure_full" />

        <Button
            android:id="@+id/newBeer_toggleGroup_2"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="130dp"
            android:text="@string/beer_size_4dl"
            app:icon="@drawable/ico_measure_slider" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.slider.Slider
        android:id="@+id/newBeer_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newBeer_toggleGroup"
        android:layout_marginHorizontal="12dp"
        android:contentDescription="@string/contentDescription_newBeer_slider"
        android:stepSize="0.1"
        android:valueFrom="0.1"
        android:valueTo="1.0" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/newBeer_divider_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newBeer_slider"
        android:layout_marginVertical="4dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newBeer_textFieldEPM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newBeer_divider_1"
        android:layout_marginVertical="4dp"
        android:hint="@string/newBeer_epm"
        android:minWidth="180dp"
        android:paddingHorizontal="12dp"
        app:endIconDrawable="@drawable/ico_epm"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newBeer_editTextEPM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/newBeer_textViewArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newBeer_divider_1"
        android:layout_centerHorizontal="true"
        android:text="⇝"
        android:textSize="44dp"
        tools:ignore="HardcodedText,SpUsage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newBeer_textFieldABV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newBeer_divider_1"
        android:layout_alignParentEnd="true"
        android:layout_marginVertical="4dp"
        android:hint="@string/newBeer_abv"
        android:minWidth="180dp"
        android:paddingHorizontal="12dp"
        app:endIconDrawable="@drawable/ico_abv"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newBeer_editTextABV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/newBeer_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newBeer_textFieldEPM"
        android:layout_centerHorizontal="true"
        android:text="@string/newBeer_checkbox" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newBeer_textFieldPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newBeer_checkbox"
        android:layout_marginVertical="4dp"
        android:hint="@string/newBeer_price"
        android:paddingHorizontal="12dp"
        app:endIconDrawable="@drawable/ico_coins"
        app:endIconMode="custom"
        app:suffixText="Kč">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newBeer_editTextPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/newBeer_eFabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newBeer_textFieldPrice"
        android:layout_alignParentEnd="true"
        android:layout_margin="12dp"
        android:text="@string/common_button_add"
        app:icon="@drawable/ico_add" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/newBeer_eFabDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newBeer_textFieldPrice"
        android:layout_margin="12dp"
        android:text="@string/common_button_delete"
        app:icon="@drawable/ico_delete" />

</RelativeLayout>
